# SALAD

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.swp  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
docs/source/: contributors_guide.rst  intro.rst  modules.rst  salad.rst
install_scripts/: global_poetry_install.sh
scripts/: upload_to_drive
scripts/install_scripts/: pre-req_opencv  rclone_install
scripts/start_scripts/: start-salad
src/: camera.py  scheduler.py
src/salad/: .relay.py.swp  camera.py  conf.ini  file_io.py  relay.py  scheduler.py
tests/: camera_test.py  file_io_test.py  relay_test.py
