[tool.poetry]
name = "salad"
version = "0.1.0"
description = "Self-Sustaining Autonomous Lunar Aeroponic Device"
authors = ["JayPankajPatel <jayp102501@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[tool.poetry.dependencies]
python = "^3.9.0"
opencv-python = "==4.7.0.72"
schedule = "^1.2.0"
lib8relind = {git = "https://github.com/JayPankajPatel/8relind-rpi", rev = "main"}
rocketry = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"
safety = "^2.3.5"
pre-commit = "^3.3.2"
nitpick = "^0.33.2"
wemake-python-styleguide = "^0.18.0"
pytest-mock = "^3.10.0"
sphinx = "6.2.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
